Added a blank js file to the sandbox

--- a/sandbox.html
+++ b/sandbox.html
@@ -9,9 +9,12 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <div id="main" role="main"></div>
+    <div id="main" role="main">
+      <p>This page is intentionally blank</p>
+    </div>
     <script src="lib/jquery-1.9.1.js"></script>
     <script src="lib/underscore-1.4.4.js"></script>
     <script src="lib/backbone-0.9.10.js"></script>
+    <script src="sandbox.js"></script>
   </body>
 </html>
