Updated to Backbone.js 1.0.0 and added model-view-view-controller examples

--- a/mvvc.html
+++ b/mvvc.html
@@ -10,11 +10,11 @@
   </head>
   <body>
     <div id="main" role="main">
-      <p>Backbone.js Sandbox</p>
+      <p>Backbone.js MVVC</p>
     </div>
     <script src="lib/jquery-1.9.1.js"></script>
     <script src="lib/underscore-1.4.4.js"></script>
     <script src="lib/backbone-1.0.0.js"></script>
-    <script src="sandbox.js"></script>
+    <script src="mvvc.js"></script>
   </body>
 </html>
